--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "server",
+  "name": "nodejs-sample-rest-api",
   "version": "1.0.0",
+  "description": "Sample NodeJS REST API Service with In-memory Cache",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.mjs",
+    "test": "mocha test.mjs"
   },
-  "author": "Shafraz Buhary",
-  "license": "ISC",
-  "description": "To Do Application Server",
+  "author": "",
+  "license": "Apache-2.0",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "pg": "^8.11.5"
+    "express": "^4.18.1",
+    "node-cache": "^5.1.2",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.8",
+    "chai-http": "^4.4.0",
+    "mocha": "^10.2.0"
   }
 }
