--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "node-cache": "^5.1.2",
+    "pg": "^8.11.5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
